--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "cucumber-js test",
+    "cucumber dryrun": "cucumber-js test -d"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
