--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js test",
+    "test": "cucumber-js test --parallel 1",
     "cucumber dryrun": "cucumber-js test -d"
   },
   "keywords": [],
