--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,7 +6,6 @@ on:
     branches: [ main, master ]
 jobs:
   test:
-    continue-on-error: true
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +20,7 @@ jobs:
     - name: Run Cucumber tests
       run: npm test
     - name: Run Reporter generator
+      if: ${{ always() }}
       run: npm run posttest
     - uses: actions/upload-artifact@v3
       if: always()
