Shorten timeout and comment out failing scenario

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  test:
-    timeout-minutes: 60
+  run-cucumber-tests:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
